test/errors/value/io/open3.yasl
let f = io.open('f', 'p')
